Alignment Correcting

--- a/css/styles.css
+++ b/css/styles.css
@@ -15,8 +15,7 @@
 
 .NavBar{
     display: flex; 
-    justify-content: space-between;
-    width: 1440px;
+    justify-content: space-around;
     width: 1440px;
     height: 72px;
     align-items: center;    
@@ -39,8 +38,8 @@
 body{
     font-family: roboto,sans-serif;
     font-size:16px;
-    line-height 1.6rem;
     font-weight: 400;
+    width: 1440px;
 }
 
 /* list style global*/
@@ -91,13 +90,6 @@ h2{
     font-weight: 500;
 }
 
-.logo-footer{
-    text-decoration: none;
-    color:var(--WHITE);
-}
-.logo-footer span{
-    color:var(--IRIS);
-}
 
 /*Order Service*/
 
@@ -140,10 +132,7 @@ h2{
     font-weight: 500;
     margin-top: none;
 }
-.logo-footer span{
-    color: var(--IRIS);
-    text-decoration: none;
-}
+
 
 .studio-strat{
     display: flex;
@@ -186,29 +175,99 @@ h2{
     gap: 24px;
     justify-content: center;
 }
-.team-members{
+
+/*Team Members*/
+
+.team-mebers{
     display: flex;
     flex-direction: row;
     justify-content: center;
     gap: 24px;
-
-    
 }
 
-footer{
+.team-mark{
+    display: flex;
+    padding-bottom: 0px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+}
+.team-mark{
+    border-radius: 0px 0px 4px 4px;
+    background: var(--WHITE, #FFF);
+    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+}
+
+.team-tom{
+    display: flex;
+    padding-bottom: 0px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+}
+.team-tom{
+    border-radius: 0px 0px 4px 4px;
+    background: var(--WHITE, #FFF);
+    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+}
+
+.team-camila{
+    display: flex;
+    padding-bottom: 0px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+}
+.team-camila{
+    border-radius: 0px 0px 4px 4px;
+    background: var(--WHITE, #FFF);
+    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+}
+
+.team-daniel{
+    display: flex;
+    padding-bottom: 0px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+}
+.team-daniel{
+    border-radius: 0px 0px 4px 4px;
+    background: var(--WHITE, #FFF);
+    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+}
+
+/*Footer Section*/
+.logo-footer{
+    text-decoration: none;
+    color:var(--WHITE);
+}
+.logo-footer span{
+    color: var(--IRIS);
+    text-decoration: none;
+}
+
+
+.footer-end{
     background-color: var(--NAVY-BLUE);
     color: var(--CLOUD);
     width: 1440px;
     height: 312px;
     display: flex;
-    flex-direction: column;
     justify-content: center;
+    flex-direction: column;
+    gap: 12px;
+    padding-left: 10%;
+
 }
 
 .foot-header{
     display: block;
 }
-
-.foot-body{
-    width: 264px;
+.footer-body{
+    width:264px;
 }
